Data transformation pipeline completely added and integrated

--- a/research/02_data_transformation.ipynb
+++ b/research/02_data_transformation.ipynb
@@ -224,7 +224,7 @@
     "    data_transformation_train = DataTransformation(config=data_transformation_config, data=train_table)\n",
     "    data_transformation_test = DataTransformation(config=data_transformation_config, data=test_table)\n",
     "    train_dataset=data_transformation_train.save_to_disk(os.path.join(data_transformation_config.root_dir, 'train_data'))\n",
-    "    test_dataset=data_transformation_test.save_to_disk(os.path.join(data_transformation_config.root_dir, 't_data'))\n",
+    "    test_dataset=data_transformation_test.save_to_disk(os.path.join(data_transformation_config.root_dir, 'test_data'))\n",
     "except Exception as e:\n",
     "    raise e"
    ]
