Fixed data ingestion, transformation pipeline and removed the dependency on configuration manager

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -125,8 +125,8 @@
     "import os\n",
     "import urllib.request as request\n",
     "import zipfile\n",
-    "from TextShortify.logging import logger\n",
-    "from TextShortify.utils.common import get_size"
+    "from DocQnA.logging import logger\n",
+    "from DocQnA.utils.common import get_size"
    ]
   },
   {
